--- a/src/Repositories/OrderService.Repositories.csproj
+++ b/src/Repositories/OrderService.Repositories.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\OrderService.Domain.csproj" />
+    <ProjectReference Include="..\Infrastructure\OrderService.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+  </ItemGroup>
+
 </Project>
