--- a/src/Services/OrderService.Services.csproj
+++ b/src/Services/OrderService.Services.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\OrderService.Domain.csproj" />
+    <ProjectReference Include="..\Repositories\OrderService.Repositories.csproj" />
+  </ItemGroup>
+
 </Project>
